# akira

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  budget.py  config_store.py  deepseek_agent.py  main.py  prompts.py  pyproject.toml  report.py  settings.py  tools.py
.github/: copilot-instructions.md
cloudwatchlog/: 2026-07-02.txt  2026-07-03.txt  fetch_log.sh
docs/: deepseek-v4-pro-guide.md
docs/akira-voice/: 2026-07-19-gpt56-terra-error.md
prompt_history/: 20260702-claude-fable-5.txt  20260703-claude-sonnet-5.xt  20260704-deepseek-v4-pro.txt  20260707-deepseek-v4-pro.txt  20260712-claude-fable-5.txt  20260713-claude-fable-5.txt
