[project]
name = "akira"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.43.29",
    "google-genai>=1.75.0",
    "mcp>=1.27.2",
    "python-dotenv>=1.2.2",
    "strands-agents-tools>=0.8.2",
    "strands-agents[anthropic,gemini,openai,litellm]>=1.43.0",
    "fastapi",       # LiteLLM DeepSeekプロバイダが内部的に要求（節約モード用）
    "orjson",        # LiteLLM DeepSeekプロバイダが内部的に要求（節約モード用）
]
